// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin/FormsDocSidebar LocationDisplay should display the location when open registration is disabled 1`] = `"LocationRegistration(opens in a new tab)"`;

exports[`Admin/FormsDocSidebar LocationDisplay should display the location with a link when open registration is enabled 1`] = `"Registration(opens in a new tab)"`;

exports[`Admin/FormsDocSidebar TemplateRevert should allow a form to be reverted to the default layout 1`] = `"The form has been restored to the default template.Undo"`;

exports[`Admin/FormsDocSidebar TemplateRevert should allow a form to be reverted to the default layout 2`] = `
Array [
  "core/block",
  "core/block",
  "core/block",
  "core/block",
  "core/block",
  "llms/form-field-redeem-voucher",
]
`;

exports[`Admin/FormsDocSidebar TemplateRevert should allow a form to be reverted to the default layout 3`] = `
Array [
  "core/block",
  "core/block",
  "core/block",
  "core/block",
  "core/block",
  "core/paragraph",
]
`;
